--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.4.jar=C:\\Users\\SENA\\Documents\\commons-fileupload-1.4.jar
+file.reference.commons-io-2.11.0.jar=C:\\Users\\SENA\\Documents\\commons-io-2.11.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +46,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-fileupload-1.4.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
