--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.commons-fileupload-1.4.jar=C:\\Users\\SENA\\Documents\\commons-fileupload-1.4.jar
-file.reference.commons-io-2.11.0.jar=C:\\Users\\SENA\\Documents\\commons-io-2.11.0.jar
+file.reference.commons-fileupload-1.4.jar=commons-fileupload-1.4.jar
+file.reference.commons-io-2.11.0.jar=commons-io-2.11.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
